--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "framer-motion": "^11.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.1.1",
     "tailwind-merge": "^2.6.0"
   },
